Thu Feb  7 15:42:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_end_with): compares with the suffix.

Thu Feb  7 15:03:15 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/korean.c: add support for CP949 by Park Ji-In.
	  [ruby-dev:33626]

Thu Feb  7 11:11:02 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* missing/lgamma_r.c (lgamma_r): some compilers don't permit dividing
	  by literal 0.0. use const variable instead.

	* {bcc32,win32,wince}/Makefile.sub (MISSING): add lgamma_r.obj and
	  tgamma.obj.

Thu Feb  7 10:39:21 2008  Tanaka Akira  <akr@fsij.org>

	* math.c (math_gamma): new method Math.gamma.
	  (math_lgamma): new method Math.lgamma.

	* include/ruby/missing.h (tgamma): declared unless HAVE_TGAMMA.
	  (lgamma_r): declared unless HAVE_LGAMMA_R.

	* configure.in (tgamma): check for replacement functions.
	  (lgamma_r): ditto.
	
	* missing/tgamma.c: new file.  based on gamma.c from
	  "C-gengo niyoru saishin algorithm jiten" (New Algorithm handbook
	  in C language) (Gijyutsu hyouron sha, Tokyo, 1991)
	  by Haruhiko Okumura.

	* missing/lgamma_r.c: ditto.

	* LEGAL (missing/tgamma.c): describe as public domain.
	  (missing/lgamma_r.c): ditto.

Thu Feb  7 09:05:57 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (nkf_enc_from_index): BINARY does not
	  have in-bound encoding index.

Thu Feb  7 04:26:28 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/korean.c: add EUC-KR conversion support by Park Ji-In.
	  [ruby-dev:33621]

Wed Feb  6 01:47:39 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_flatten): do not flatten recursively by default.
	  [ruby-dev:33603]

Wed Feb  6 00:50:19 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* insns.def (adjuststack): never use INC_SP with minus value because
	  some compilers cannot deal it correctly. use DEC_SP instead.

Wed Feb  6 00:48:41 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_hash.rb: add tests to achieve over 90% test coverage